--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -18,38 +18,51 @@
 }
 
 
-.carruselBox {
-    position: relative;
+.portada {
     overflow: hidden;
     margin-top: 67px;
+    height: 600px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    padding-bottom: 50px;
     -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.35);
     -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.35);
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.35);
 }
 
+.logoPortada{
+    width: 30%;
+}
+
+.portada1{
+    background-image: url("../../../assets/img/otros/3.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+.portada2{
+    background-image: url("../../../assets/img/otros/2.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+.portada3{
+    background-image: url("../../../assets/img/otros/1.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+
 .carruselText3{
-    position: absolute;
-    margin-left: 37%;
-    margin-top: 24%;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     font-weight: 300;
     font-size: 20px;
     padding: 30px;
     width: 400px;
-}
-
-.carousel-item img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-
-.carruselBox .carousel-inner,
-.carruselBox .carousel-item,
-.carruselBox img {
-    
-    height: 700px;
 }
 
 .botonesCarrusel {
@@ -407,16 +420,6 @@
         padding: 0px;
     }
 
-    .carruselText3{
-        position: absolute;
-        margin-left: 15%;
-        margin-top: 89%;
-        font-weight: 300;
-        font-size: 20px;
-        padding: 30px;
-        width: 400px;
-    }
-
     .cuerpo {
         margin-left: 2%;
         margin-right: 2%;
@@ -531,16 +534,6 @@
         padding: 0px;
     }
 
-    .carruselText3{
-        position: absolute;
-        margin-left: 16%;
-        margin-top: 59%;
-        font-weight: 300;
-        font-size: 20px;
-        padding: 30px;
-        width: 400px;
-    }
-
     .cuerpo {
         margin-left: 2%;
         margin-right: 2%;
@@ -652,17 +645,7 @@
         margin: 0px;
         padding: 0px;
     }
-
-    .carruselText3{
-        position: absolute;
-        margin-left: 30%;
-        margin-top: 47%;
-        font-weight: 300;
-        font-size: 20px;
-        padding: 30px;
-        width: 400px;
-    }
-
+    
     .cuerpo {
         margin-left: 2%;
         margin-right: 2%;
