--- a/src/app/components/todas-noticias/todas-noticias.component.css
+++ b/src/app/components/todas-noticias/todas-noticias.component.css
@@ -138,7 +138,7 @@
     }
 }
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 576px){
     .titulo{
         margin-left: 5%;
         margin-right: 5%;
@@ -147,6 +147,68 @@
     .cuerpo{
         margin-left: 5%;
         margin-right: 5%;
+    }
+
+    .row3{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 20px;
+        gap: 20px;
+
+        .bloque{
+            width: 100%;
+
+            img{
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px){
+    .titulo{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .cuerpo{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .bloque{
+        width: 100%;
+    }
+
+    .row3{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-bottom: 20px;
+        gap: 20px;
+
+        .bloque{
+            width: 100%;
+
+            img{
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 993px) {
+    .titulo{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .cuerpo{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .bloque{
+        width: 100%;
     }
 
     .row3{
