--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -34,7 +34,8 @@
 }
 
 .logoPortada{
-    width: 30%;
+    width: 40%;
+    padding-bottom: 30px;
 }
 
 .portada1{
@@ -419,11 +420,30 @@
         margin: 0px;
         padding: 0px;
     }
+    
+    .logoPortada{
+        width: 90%;
+        padding-bottom: 30px;
+    }
+    
+    .botonDestacado{
+        width: 100%;
+    }
+    
+    .carruselText3{
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        font-weight: 300;
+        font-size: 15px;
+        padding: 30px;
+        width: 300px;
+    }
 
     .cuerpo {
         margin-left: 2%;
         margin-right: 2%;
     }
+
     .bloque{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -532,6 +552,11 @@
         width:fit-content;
         margin: 0px;
         padding: 0px;
+    }
+
+    .logoPortada{
+        width: 70%;
+        padding-bottom: 30px;
     }
 
     .cuerpo {
@@ -645,7 +670,12 @@
         margin: 0px;
         padding: 0px;
     }
-    
+
+    .logoPortada{
+        width: 60%;
+        padding-bottom: 30px;
+    }
+
     .cuerpo {
         margin-left: 2%;
         margin-right: 2%;
