--- a/src/app/components/formulario-reactivo/formulario-reactivo.component.html
+++ b/src/app/components/formulario-reactivo/formulario-reactivo.component.html
@@ -27,7 +27,7 @@
                     }
                 </select>
             </div>
-        </div>
+        </div>  
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Precio</label>
             <div class="col-sm-10">
@@ -73,7 +73,7 @@
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Serie</label>
             <div class="col-sm-10">
-                <select formControlName="serie" class="form-control" (select)="2">
+                <select formControlName="serie" class="form-control select" (select)="2">
                     <option value="">Selecciona una serie...</option>
                     @for (serie of series; track $index) {
                         <option value="{{serie.id}}">{{serie.nombre}}</option>
