--- a/src/app/components/carrito/carrito.component.css
+++ b/src/app/components/carrito/carrito.component.css
@@ -21,10 +21,17 @@
     td{
         padding: 15px;
         font-weight: 600;
+        padding-left: 0px;
+        padding-right: 0px;
+        width: 3%;
+        word-wrap: break-word;  
+        white-space: normal;
     }
     th{
         color: grey;
-        padding: 20px;
+        padding: 15px;
+        padding-left: 0px;
+        padding-right: 0px;
         font-weight: 400;
     }
 }
