Fix Error Miniatura

--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -4,7 +4,7 @@
         <img class="logo" src="../../../assets/img/otros/NebulaLogoBlack.png" alt="img login">
       </div>        
       <div class="body">
-        <h3>Registrar Usuario</h3>
+        <h3>Editar Datos de Usuario</h3>
         
         <form [formGroup]="formUsuarios" (ngSubmit)="onSubmit()">
           <div class="fila">
