--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -547,7 +547,7 @@
     
 }
 
-/*Moviles*/
+/*Tablets*/
 @media only screen and (min-width: 576px) and (max-width: 767px){
     .carruselBox{
         width:fit-content;
