--- a/src/app/components/noticias/noticias.component.css
+++ b/src/app/components/noticias/noticias.component.css
@@ -102,9 +102,11 @@
         .contenido {
             padding: 10px;
             text-align: left;
+            height: 100%;
 
             h4 {
                 font-weight: 600;
+                font-size: 20px;
             }
 
             p {
@@ -138,6 +140,7 @@
 
         h4 {
             font-weight: 600;
+            font-size: 20px;
         }
 
         p {
