Fix Datos Libro CSS

--- a/src/app/components/product-page/product-page.component.html
+++ b/src/app/components/product-page/product-page.component.html
@@ -16,7 +16,7 @@
             <img src="{{libro.portada}}">
         </div>
         <div class="datos">
-            <h5>Formato</h5>
+            <h5 class="formato">Formato</h5>
             <p>{{libro.formato}}</p>
             <h5>ISBN</h5>
             <p>{{libro.ISBN}}</p>
