--- a/src/app/components/product-page/product-page.component.css
+++ b/src/app/components/product-page/product-page.component.css
@@ -142,14 +142,12 @@
 
 @media (max-width: 700px) {
     .box{
-        position: relative;
         margin-left: 5%;
         margin-right: 5%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-bottom: 190px;
         margin-bottom: 40px;
 
         .datos{
@@ -157,15 +155,18 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            position: absolute;
+            order: 5;
             line-height: 10px;
             bottom: 0;
             left: 60px;
             text-align: center;
             background-color: #ebebeb;
             padding: 15px;
-            padding-right: 85px;
-            padding-left: 85px;
+            padding-right: 70px;
+            padding-left: 70px;
+            word-wrap: break-word;  
+            white-space: normal;
+            order: 3;
         }
 
         .precio{  
