--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="barraBusqueda">
 <nav class="navbar navbar-expand-lg barra">
-  <a class="navbar-brand" href="#"><img class="logo" src="../../../assets/img/otros/NebulaLogoWhite.png"></a>
+  <a class="navbar-brand logoEnlace" href="#"><img class="logo" src="../../../assets/img/otros/NebulaLogoWhite.png"></a>
   <button class="navbar-toggler responsiveToggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon responsiveToggler"></span>
   </button>
