Fix Scroll Libro Pagina

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
         <img src="../../../assets/img/otros/logo2.png" class="logoPortada">
         <div class="carruselText3">
             <p>La tribu de los elfos reclama venganza sobre quienes los purgaron. ¡¿Sus aliados son ahora sus enemigos?! </p>
-            <button class="botonDestacado botonCarrusel2">Leer más</button>
+            <button class="botonDestacado botonCarrusel2" routerLink="/serie/20">Leer más</button>
         </div>
     </div> 
 }
@@ -57,7 +57,7 @@
     </div>
     <div class="novedades">
         <div class="colNov1">
-            <div class="novedad" routerLink="/series/2">
+            <div class="novedad" routerLink="/libros/75">
                 <div class="imagenNoti">
                     <img src="../../../assets/img/otros/Novedad2.jpg" alt="">
                 </div>
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="colNov2">
-            <div class="novedad" routerLink="/series/2">
+            <div class="novedad" routerLink="/libros/82">
                 <div class="imagenNoti2">
                     <img src="../../../assets/img/otros/Novedad1.jpg" alt="">
                 </div>
@@ -77,12 +77,12 @@
                     <p>Esta entretenida historia de extraterrestres y fantasmas te dejará con ganas de más desde su primer capítulo. Oculto, un friki que cree en los ovnis, y Ayase, su compañera criada por una abuela médium, vivirán una historia que les hará cuestionarse todo lo que han creído hasta el momento.</p>
                 </div>
             </div>
-            <div class="novedad" routerLink="/series/2">
+            <div class="novedad" routerLink="/serie/22">
                 <div class="imagenNoti2">
                     <img src="../../../assets/img/otros/Novedad3.jpg" alt="">
                 </div>
                 <div class="textoNov3">
-                    <h3>FULL METAL ALCHEMIST BROTHERHOOD</h3>
+                    <h3>FULL METAL ALCHEMIST KANZENBAN</h3>
                     <p>Cuando tan solo eran unos niños, los hermanos Edward y Alphonse Elric usaron la alquimia para cometer un pecado capital: intentar la transmutación humana, pero no se resignan a su destino y están dispuestos a recuperar sus cuerpos.</p>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                 Las dudas de Woody como criptozoólogo de la AIDP. Un hombre tigre amenaza un pueblo de la India. Hay algo oculto en un antiguo laboratorio de 
                 la Hermandad Heliópica de Ra. Una invocación para celebrar el año nuevo. Seis nuevas aventuras del pasado de Hellboy.
             </p>
-            <button class="botonDestacado boton2">Leer más</button>
+            <button class="botonDestacado boton2" routerLink="/libros/89">Leer más</button>
         </div>
     </div>
     <div class="destacado">
@@ -164,7 +164,7 @@
             <p>La banda del Sombrero de paja llega a la isla del futuro Egghead. ¡Allí está el laboratorio del doctor Vegapunk, donde el corazón 
                 aventurero de Luffy palpita con fuerza al ver tecnologías desconocidas! ¡Pero ahí llega el CP-0 para eliminar a Vegapunk! 
             </p>
-            <button class="botonDestacado boton3">{{"Leer más" | translate}}</button>
+            <button class="botonDestacado boton3" routerLink="/serie/24">{{"Leer más" | translate}}</button>
         </div>
     </div>
 </div> 
