--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -19,7 +19,7 @@
         <table class="tabla">
             <tr>
                 <th>Producto</th>
-                <th>Título</th>
+                <th class="titulo">Título</th>
                 <th>Precio</th>
                 <th>Cantidad</th>
                 <th>Subtotal</th>
