--- a/src/app/components/noticia-crear/noticia-crear.component.html
+++ b/src/app/components/noticia-crear/noticia-crear.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="contenedor">
     <div class="titulo">
         <div class="tituloh1">
             <i class="bi bi-pencil"></i><h1>Redactar Noticia</h1><i class="bi bi-pencil"></i>
