--- a/src/app/components/user-envios/user-envios.component.html
+++ b/src/app/components/user-envios/user-envios.component.html
@@ -24,7 +24,15 @@
                     </td>
                     <td>{{ envio.nombre }}</td>
                     <td>{{ envio.direccion }}</td>
-                    <td>{{ envio.estado }}</td>
+                    @if (envio.estado == "Enviado") {
+                      <td class="enviado">{{ envio.estado }}</td>
+                    }
+                    @if (envio.estado == "Cancelado") {
+                      <td class="cancelado">{{ envio.estado }}</td>
+                    }
+                    @if (envio.estado == "Entregado") {
+                      <td class="entregado">{{ envio.estado }}</td>
+                    }
                 <td>
                   <div class="btn-group">
                     <button (click)="delete(envio.id, $index)" class="btn btn-danger boton">
