--- a/src/app/components/libros-crear/libros-crear.component.html
+++ b/src/app/components/libros-crear/libros-crear.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="contenedor">
     <div class="titulo">
         <div class="tituloh1">
             <i class="bi bi-book"></i><h1>Crear Libro</h1><i class="bi bi-book"></i>
