--- a/src/app/components/noticia-editar/noticia-editar.component.css
+++ b/src/app/components/noticia-editar/noticia-editar.component.css
@@ -27,10 +27,97 @@
 }
 
 
-.container{
+.contenedor{
     width: auto;
     margin-left: 14%;
     margin-right: 14%;
     box-shadow: 0px 7px 5px 0px rgba(204,204,204,1);
+}
+
+@media only screen and (max-width: 576px){
+    .titulo{
+        margin-left: 2%;
+        margin-right: 2%;
+        h1{
+            font-size: 30px;
+            font-weight: 700;
+            
+        }
+    
+        p{
+            font-weight: 300;
+        }
+
+        .tituloh1{
+            gap: 10px;
+            i{
+                font-size: 30px;
+                font-weight: 700;
+            }
+        }
+    }
+    
+    .contenedor{
+        margin-left: 0%;
+        margin-right: 0%; 
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px){
+    .titulo{
+        margin-left: 2%;
+        margin-right: 2%;
+        h1{
+            font-size: 30px;
+            font-weight: 700;
+            
+        }
+    
+        p{
+            font-weight: 300;
+        }
+
+        .tituloh1{
+            gap: 10px;
+            i{
+                font-size: 30px;
+                font-weight: 700;
+            }
+        }
+    }
+    
+    .contenedor{
+        margin-left: 0%;
+        margin-right: 0%; 
+    }
+}
+
+@media (min-width: 768px) and (max-width: 993px) {
+    .titulo{
+        margin-left: 2%;
+        margin-right: 2%;
+        h1{
+            font-size: 30px;
+            font-weight: 700;
+            
+        }
+    
+        p{
+            font-weight: 300;
+        }
+
+        .tituloh1{
+            gap: 10px;
+            i{
+                font-size: 30px;
+                font-weight: 700;
+            }
+        }
+    }
+    
+    .contenedor{
+        margin-left: 2%;
+        margin-right: 2%; 
+    }
 }
 
