--- a/src/app/components/noticia-editar/noticia-editar.component.html
+++ b/src/app/components/noticia-editar/noticia-editar.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="card"><h1>Editar Libro</h1></div>
-<div class="container">
+<div class="contenedor">
     <div class="titulo">
         <div class="tituloh1">
             <i class="bi bi-newspaper"></i><h1>Editar Noticia</h1><i class="bi bi-newspaper"></i>
