--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -27,9 +27,9 @@
                 </div>
             </div>
             <div class="fila pregunta">
-                <p>Pregunta de Seguridad</p>
+                <p>¿Cual fue tu primer amigo de la infancia?</p>
                 <div class="inputBordeUser">
-                    <i class="bi bi-key"></i><input type="password"  class="form-control preguntaSeguridadInput" placeholder="¿Cual fue tu primer amigo de la infancia?" [(ngModel)]="preguntaSeguridad">
+                    <i class="bi bi-key"></i><input type="password"  class="form-control preguntaSeguridadInput" placeholder="Pregunta de Seguridad" [(ngModel)]="preguntaSeguridad">
                 </div>
             </div>
             <div class="d-grid gap-2 mb-3">
