--- a/src/app/components/contrasena-olvidada/contrasena-olvidada.component.html
+++ b/src/app/components/contrasena-olvidada/contrasena-olvidada.component.html
@@ -8,10 +8,9 @@
                 </div>
             </div>
             <div class="fila pregunta">
-                <div class="title"><p>Pregunta de seguridad</p></div>
+                <div class="title"><p>¿Cómo se llamaba su primer amigo de la infancia?</p></div>
                 <div class="inputBordeUser">
-                    <i class="bi bi-key"></i><input type="password"  autocomplete="false" class="form-control" placeholder="¿Cómo se llamaba su primer amigo de la infancia?
-                    " [(ngModel)]="preguntaSeguridad" [type]="passwordVisible ? 'text' : 'password'">
+                    <i class="bi bi-key"></i><input type="password"  autocomplete="false" class="form-control" placeholder="Pregunta de seguridad" [(ngModel)]="preguntaSeguridad" [type]="passwordVisible ? 'text' : 'password'">
                     <i (click)="mostrarContrasena()" [class]="passwordVisible ? 'bi bi-eye' : 'bi bi-eye-slash'"></i>
                 </div>
             </div>
