--- a/src/app/components/libros-etiquetas/libros-etiquetas.component.html
+++ b/src/app/components/libros-etiquetas/libros-etiquetas.component.html
@@ -3,15 +3,12 @@
     <div class="menu">
         <div class="breadcrumbs">
             <h5>
-                <a class="mainBread">{{this.categoria}}</a>
+                <a class="mainBread">{{this.etiquetaNombre}}</a>
                 > 
                 <a>TODOS LOS VOLUMENES</a>
             </h5>
             <div class="ver">
                 <h3>CATÁLOGO</h3>
-                <div class="verseries">
-                    <a href="#" routerLink="/series/{{this.idLibro}}"><h4>VER SERIES <i class="bi bi-chevron-down"></i></h4></a>
-                </div>
             </div>
         </div>
     </div>
