--- a/src/app/components/pagos-pagina/pagos-pagina.component.css
+++ b/src/app/components/pagos-pagina/pagos-pagina.component.css
@@ -46,6 +46,12 @@
   .form-control{
     width: 100%;
   }
+
+  .direcciones{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
   
   .checkout-user {
     text-align: center;
