--- a/src/app/components/user-envios/user-envios.component.css
+++ b/src/app/components/user-envios/user-envios.component.css
@@ -35,6 +35,11 @@
     font-weight: 700;
 }
 
+.empaquetando{
+    color: rgb(255, 166, 0);
+    font-weight: 700;
+}
+
 .divTabla{
     text-align: center;
 
