--- a/src/app/components/contrasena-olvidada/contrasena-olvidada.component.css
+++ b/src/app/components/contrasena-olvidada/contrasena-olvidada.component.css
@@ -9,23 +9,25 @@
     margin-left: 20%;
     margin-right: 20%;
     box-shadow: 0px 7px 7px 2px rgba(0, 0, 0, 0.321);
-    h3{
+
+    h3 {
         font-size: 30px;
         font-weight: 700;
     }
-    
+
 }
 
-body{
+body {
     background: url("../../../assets/img/otros/background.jfif");
     background-size: cover;
 }
 
-.imagen{
+.imagen {
     position: absolute;
     top: 0;
     right: 0;
-    img{
+
+    img {
         padding: 14px;
         padding-left: 10px;
         width: 150px;
@@ -33,7 +35,7 @@ body{
     }
 }
 
-.botonVolver{
+.botonVolver {
     position: absolute;
     top: 0;
     left: 0;
@@ -46,13 +48,10 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 40px;
-    width: 100%;
-    padding-right: 14%;
-    padding-left: 14%;
+    margin-left: 40px
 }
 
-.inputBordeUser{
+.inputBordeUser {
     margin-top: 20px;
     background-color: #ffffff;
     padding: 18px;
@@ -61,18 +60,19 @@ body{
     gap: 20px;
     justify-content: left;
     align-items: center;
-    i{
+
+    i {
         font-weight: 500;
         font-size: 25px;
     }
 
-    input{
+    input {
         border: 0;
         width: 100%;
     }
 }
 
-.inputBorde{
+.inputBorde {
     margin-bottom: 30px;
     margin-top: 30px;
     background-color: #ffffff;
@@ -82,18 +82,19 @@ body{
     gap: 15px;
     justify-content: left;
     align-items: center;
-    i{
+
+    i {
         font-weight: 500;
         font-size: 25px;
     }
 
-    input{
+    input {
         border: 0;
         width: 200px;
     }
 }
 
-.inputContra{
+.inputContra {
     margin-bottom: 30px;
     margin-top: 30px;
     background-color: #ffffff;
@@ -103,37 +104,38 @@ body{
     gap: 15px;
     justify-content: left;
     align-items: center;
-    i{
+
+    i {
         font-weight: 500;
         font-size: 25px;
     }
 
-    input{
+    input {
         border: 0;
-        
+
     }
 }
 
-.contraseñas{
+.contraseñas {
     display: flex;
     gap: 20px;
     margin-bottom: 0px;
 }
 
-.mostrarContra{
+.mostrarContra {
     width: 10px;
 }
 
-input{
+input {
     border: 0;
 }
 
-label{
+label {
     font-weight: 300;
     color: #868686;
 }
 
-.textoContra{
+.textoContra {
     transition: 0.2s;
     font-size: 13px;
     font-weight: 600;
@@ -141,7 +143,7 @@ label{
     color: brown;
 }
 
-.iniciarBoton{
+.iniciarBoton {
     background-color: #81689D;
     border: 0px;
     color: white;
@@ -152,52 +154,128 @@ label{
     margin-top: 20px;
     padding: 12px;
     width: 100%;
-   }
+}
 
-  .iniciarBoton:hover{
-      transition: 0.4s;
-      background-color: rgb(0, 0, 0);
-  }
+.iniciarBoton:hover {
+    transition: 0.4s;
+    background-color: rgb(0, 0, 0);
+}
 
-  .form-control:focus {
+.form-control:focus {
     border: none;
     box-shadow: none;
     outline: none;
-  }
+}
 
-  .pregunta{
+.pregunta {
     text-align: left;
-    p{
+
+    p {
         font-weight: 600;
     }
-  }
+}
 
-  .fila{
-    margin-bottom: 30px;
-  }
+.fila {
+    margin-bottom: 10px;
+}
 
-  .atras{
+.atras {
     border: 0px;
     margin-left: 10px;
     transition: 0.4s;
     padding-left: 10px;
     padding-right: 10px;
-    i{
+
+    i {
         font-size: 30px;
     }
-  }
+}
 
-  .atras:hover{
+.atras:hover {
     transition: 0.4s;
     background-color: #d2d1d1;
-  }
+}
 
-  @media (max-width: 700px) {
+  @media only screen and (max-width: 575px){
+    .body{
+        margin-top: 80px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h3{
+            font-size: 20px;
+        }
+        
+        .form-control::placeholder{
+            font-size: 15px;
+        }
+    }
+
     .wrapper{
-        margin-left: 5%;
-        margin-right: 5%;
+        height: 100%;
+        margin-left: 0%;
+        margin-right: 0%;
 
         .inputContra{
+            width: 100%;
+        }
+
+        .inputBordeUser{
+            width: 100%;
+            font-size: 15px;
+        }
+
+        .body{
+            margin-left: 10px;
+        }
+
+        .fila{
+            width: 85%;
+        }
+
+        .pregunta{
+            text-align: center;
+            .inputBordeUser{
+                gap: 10px;
+            }
+        }
+
+        .contraseñas{
+            gap: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .inputContra{
+            margin: 0px;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+        .preguntaSeguridadInput::placeholder{
+            font-size: 85%;
+        }
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px){
+    .body{
+        margin-top: 80px;
+    }
+
+    .wrapper{
+        height: 100%;
+        margin-left: 10%;
+        margin-right: 10%;
+
+        .inputContra{
+            width: 100%;
+        }
+
+        .inputBordeUser{
             width: 100%;
         }
 
@@ -205,7 +283,61 @@ label{
             margin-left: 10px;
         }
 
-       
+        .fila{
+            width: 100%;
+        }
+
+        .pregunta{
+            .inputBordeUser{
+                gap: 10px;
+            }
+        }
+
+        .contraseñas{
+            gap: 10px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .inputContra{
+            margin: 0px;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+        
+    }
+}
+
+@media (min-width: 768px) and (max-width: 993px) {
+    .body{
+        margin-top: 80px;
+    }
+
+    .wrapper{
+        height: 100%;
+        
+
+        .inputContra{
+            width: 100%;
+        }
+
+        .inputBordeUser{
+            width: 100%;
+        }
+
+        .body{
+            margin-left: 10px;
+        }
+
+        .fila{
+            width: 100%;
+        }
+
+        .pregunta{
+            .inputBordeUser{
+                gap: 10px;
+            }
+        }
 
         .contraseñas{
             gap: 10px;
@@ -219,4 +351,4 @@ label{
             margin-top: 10px;
         }
     }
-  }
+}
