--- a/src/app/components/pagos-pagina/pagos-pagina.component.html
+++ b/src/app/components/pagos-pagina/pagos-pagina.component.html
@@ -18,8 +18,84 @@
         <hr>
         <div class="input">
           <label class="col-sm-2 col-form-label">Dirección</label>
-          <div class="">
+          <div class="direcciones">
             <input formControlName="direccion" type="text" class="form-control" placeholder="Dirección del Envío..." id="direccion">
+            <select formControlName="comunidad" class="form-control" id="comunidad">
+              <option value="" disabled selected>Seleccione una Comunidad Autónoma...</option>
+              <option value="Andalucía">Andalucía</option>
+              <option value="Aragón">Aragón</option>
+              <option value="Asturias">Asturias</option>
+              <option value="Baleares">Baleares</option>
+              <option value="Canarias">Canarias</option>
+              <option value="Cantabria">Cantabria</option>
+              <option value="Castilla-La Mancha">Castilla-La Mancha</option>
+              <option value="Castilla y León">Castilla y León</option>
+              <option value="Cataluña">Cataluña</option>
+              <option value="Extremadura">Extremadura</option>
+              <option value="Galicia">Galicia</option>
+              <option value="Madrid">Madrid</option>
+              <option value="Murcia">Murcia</option>
+              <option value="Navarra">Navarra</option>
+              <option value="País Vasco">País Vasco</option>
+              <option value="La Rioja">La Rioja</option>
+              <option value="Ceuta">Ceuta</option>
+              <option value="Melilla">Melilla</option>
+            </select>            
+            <select formControlName="provincia" class="form-control" id="provincia">
+              <option value="" disabled selected>Seleccione una Provincia...</option>
+              <option value="Álava">Álava</option>
+              <option value="Albacete">Albacete</option>
+              <option value="Alicante">Alicante</option>
+              <option value="Almería">Almería</option>
+              <option value="Asturias">Asturias</option>
+              <option value="Ávila">Ávila</option>
+              <option value="Badajoz">Badajoz</option>
+              <option value="Barcelona">Barcelona</option>
+              <option value="Burgos">Burgos</option>
+              <option value="Cáceres">Cáceres</option>
+              <option value="Cádiz">Cádiz</option>
+              <option value="Cantabria">Cantabria</option>
+              <option value="Castellón">Castellón</option>
+              <option value="Ciudad Real">Ciudad Real</option>
+              <option value="Córdoba">Córdoba</option>
+              <option value="Cuenca">Cuenca</option>
+              <option value="Girona">Girona</option>
+              <option value="Granada">Granada</option>
+              <option value="Guadalajara">Guadalajara</option>
+              <option value="Guipúzcoa">Guipúzcoa</option>
+              <option value="Huelva">Huelva</option>
+              <option value="Huesca">Huesca</option>
+              <option value="Jaén">Jaén</option>
+              <option value="La Coruña">La Coruña</option>
+              <option value="La Rioja">La Rioja</option>
+              <option value="Las Palmas">Las Palmas</option>
+              <option value="León">León</option>
+              <option value="Lleida">Lleida</option>
+              <option value="Lugo">Lugo</option>
+              <option value="Madrid">Madrid</option>
+              <option value="Málaga">Málaga</option>
+              <option value="Murcia">Murcia</option>
+              <option value="Navarra">Navarra</option>
+              <option value="Ourense">Ourense</option>
+              <option value="Palencia">Palencia</option>
+              <option value="Pontevedra">Pontevedra</option>
+              <option value="Salamanca">Salamanca</option>
+              <option value="Santa Cruz de Tenerife">Santa Cruz de Tenerife</option>
+              <option value="Segovia">Segovia</option>
+              <option value="Sevilla">Sevilla</option>
+              <option value="Soria">Soria</option>
+              <option value="Tarragona">Tarragona</option>
+              <option value="Teruel">Teruel</option>
+              <option value="Toledo">Toledo</option>
+              <option value="Valencia">Valencia</option>
+              <option value="Valladolid">Valladolid</option>
+              <option value="Vizcaya">Vizcaya</option>
+              <option value="Zamora">Zamora</option>
+              <option value="Zaragoza">Zaragoza</option>
+              <option value="Ceuta">Ceuta</option>
+              <option value="Melilla">Melilla</option>
+            </select>
+            <input formControlName="codPostal" type="text" class="form-control" placeholder="Código Postal..." id="codPostal">            
           </div>
         </div>        
         <div class="input">
